# finvora_project

./: .env  .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.ps1  start.ps1
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: alerts.py  analytics.py  approvals.py  auth.py  budgets.py  emails.py  gmail.py  goals.py  invoices.py  organizations.py  payments.py  reports.py  router.py  transactions.py  vendors.py  webhooks.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/integrations/claude/: client.py  prompts.py
backend/app/integrations/google/: gmail_client.py  oauth.py
backend/app/models/: __init__.py  alert.py  approval.py  base.py  budget.py  email_sync.py  financial_goal.py  invoice.py  organization.py  payment.py  report.py  transaction.py  user.py  vendor.py
backend/app/schemas/: analytics.py  common.py  goal.py  invoice.py  organization.py  transaction.py  user.py  vendor.py
backend/app/services/: ai_cfo_service.py  ai_extraction_service.py  analytics_service.py  gmail_service.py  openai_service.py  report_service.py
backend/app/tasks/: ai_processing_task.py  alert_evaluation_task.py  beat_schedule.py  celery_app.py  email_sync_task.py  report_generation_task.py
backend/app/utils/: currency.py  date_utils.py  file_parser.py  pagination.py  security.py
frontend/: .env.local  .env.local.example  Dockerfile  next.config.js  next.config.ts  package-lock.json  package.json  setup.ps1  (+2 more)
(+49 files in other folders)
