[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finvora-backend"
version = "0.1.0"
description = "Finvora AI — Backend API"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "authlib>=1.3.1",
    "httpx>=0.27.0",
    "google-api-python-client>=2.136.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "openai>=1.40.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "pdfplumber>=0.11.0",
    "pillow>=10.4.0",
    "cryptography>=43.0.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.11.0",
]
